// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNote components should render <CustomerDetailsContainer /> correctly 1`] = `
.c0 {
  margin: 0 0 30px 0;
}

<styled.div
  className="c0"
/>
`;

exports[`AddNote components should render <FormContainer /> correctly 1`] = `
.c0 {
  margin: 0 50px;
}

<div
  className="c0"
/>
`;

exports[`AddNote components should render <Link /> correctly 1`] = `
.c0 {
  font-weight: 300;
  font-size: 18px;
}

<WithTheme(Button)
  className="c0"
/>
`;

exports[`AddNote components should render <Wrapper /> correctly 1`] = `
.c0 {
  padding: 25px;
  margin-bottom: 30px;
}

<styled.div
  className="c0"
/>
`;
